# arctic

./: CMakeLists.txt
src/: main.cpp
src/check/: control_analyzer.cpp  control_analyzer.h  type_checker.cpp  type_checker.h
src/error/: exceptions.h
src/lex/: lexer.cpp  lexer.h  token.h
src/parse/: ast.h  parse.cpp  parser.cpp  parser.h
src/test/: test_lexer.cpp  test_main.cpp  test_main.h  test_parser.cpp
src/type/: type_map.cpp  type_map.h  types.h
src/util/: casting.h  source_file.cpp  source_file.h
test/: basic.arc
